<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="movie_poster_image_content_description">Movie Poster</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="button_mark_favorite">Mark favorite</string>
    <string name="button_remove_favorite">Remove favorite</string>
    <string name="navigation_icon_description">Back</string>
    <string name="api_key_string">@string/api_key</string>

    <!-- Strings related to Settings -->
    <string name="pref_title_reviews">Info</string>
    <string name="page_title_info">Overview</string>
    <string name="page_title_reviews">Reviews</string>
    <string name="page_title_trailers">Trailers</string>
    <string name="format_rating"><xliff:g id="rating">%1$s</xliff:g>/10</string>
    <string name="format_description_genre">GENRES \n<xliff:g id="genres">%1$s</xliff:g>\n\nSYNOPSIS\n<xliff:g id="description">%2$s</xliff:g>
    </string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_key_vote_minimum">voteMin</string>
    <string name="pref_title_vote_minimum">Desired minimum vote count</string>
    <string name="pref_default_vote_minimum">1000</string>

    <string name="pref_key_choose_sorting">sorting</string>
    <string name="pref_title_choose_sorting">Select Sorting Parameter</string>
    <string name="pref_default_sorting">popularity.desc</string>
    <string-array name="pref_sorting_list_display_text">
        <item>Most Popular</item>
        <item>Recently Released</item>
        <item>Highest Rated</item>
        <item>Favorites</item>
    </string-array>
    <string-array name="pref_sorting_list_values">
        <item>popularity.desc</item>
        <item>release_date.desc</item>
        <item>vote_average.desc</item>
        <item>fav.all</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
