<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="@string/pref_key_choose_sorting"
        android:title="@string/pref_title_choose_sorting"
        android:defaultValue="@string/pref_default_sorting"
        android:entries="@array/pref_sorting_list_display_text"
        android:entryValues="@array/pref_sorting_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <EditTextPreference
        android:key="@string/pref_key_vote_minimum"
        android:title="@string/pref_title_vote_minimum"
        android:defaultValue="@string/pref_default_vote_minimum"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLines="1"/>

</PreferenceScreen>
